--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,10 +84,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="preload" href="./src/assets/images/4.webp" as="image" />
-    <link rel="preload" href="./src/assets/images/arkham6.png" as="image" />
-    <link rel="preload" href="./src/assets/images/arkham9.png" as="image" />
-    <link rel="preload" href="./src/assets/images/batrang2.png" as="image" />
+    <!-- Image preloads removed to reduce warnings -->
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
